manifests/taskapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: taskapp-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - taskapp-mariam.xyz
      secretName: taskapp-tls
  rules:
    - host: taskapp-mariam.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: taskapp
spec:
  stripPrefix:
    prefixes:
      - /api
